# LLDAW

./: .gitignore  CMakeLists.txt  build.sh  readme.md  run.sh
libs/clay/: clay.h
libs/portmidi/pm_common/: CMakeLists.txt
libs/tinycthread/: tinycthread.h
src/: main.c
src/helpers/: include.h
src/helpers/audio/: audio_definitions.h  audio_math.c  audio_math.h
src/helpers/basic/: arena.c  arena.h  definitions.h  formatters.h  state.c  state.h  string.c  string.h
src/helpers/math/: avx2.c  avx2.h  common_math.h  neon.c  neon.h
src/rendering/audio/: adsr.c  adsr.h  audio_processor.c  audio_processor.h  audio_state.c  audio_state.h  generator.c  generator.h  midi_processor.c  midi_processor.h  midi_state.c  midi_state.h
src/rendering/graphical/ui/: base_ui.c  base_ui.h  components.c  components.h  custom.c  custom.h  ui_renderer.c  ui_renderer.h  ui_settings.h
src/rendering/graphical/ui/sequencing/: sequencer_gui.c  sequencer_gui.h
src/rendering/graphical/ui/sequencing/regular/: regular_gui.h
src/rendering/graphical/ui/sequencing/tracker/: tracker_gui.c  tracker_gui.h
src/sequencing/: sequencer.c  sequencer.h
src/sequencing/regular/: regular_sequencer.h
src/sequencing/tracker/: tracker.h
